rajouter input checkbox sur page menu html et modifier style

--- a/a-la-française.html
+++ b/a-la-française.html
@@ -40,117 +40,162 @@
             <h3>Entrées</h3>
             <div class="menu-item">
                 <div class="menu-description">
-                <h4>Tartare de poulpe acidulé</h4>
-                <p>Aux zestes d'orange</p>
-                <span>25€</span>
+                    <input type="checkbox" style ="display: none;" id="dish-0">
+                    <label for="dish-0"><strong>Tartare de poulpe acidulé</strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">Aux zestes d'orange</span>
+                        <span class="prix">25€</span>
+                    </span>
                 </div>
-                <div class="menu-confirmation">
-                    <div class="menu-icon"> 
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
                     <i class="fas fa-check icon-confirmation"></i>
                     </div>
                 </div>
             </div>
             <div class="menu-item animate-1">
                 <div class="menu-description">
-                    <h4>Velouté de légumes d'antan</h4>
-                    <p>Carotte, panais, topinambour</p>
-                    <span>35€</span>
+                    <input type="checkbox" style ="display: none;" id="dish-1">
+                    <label for="dish-1"><strong>Velouté de légumes d'antan</strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">Carotte, panais, topinambour</span>
+                        <span class="prix">35€</span>
+                    </span>
+                </div>
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
+                    <i class="fas fa-check icon-confirmation"></i>
                     </div>
-                    <div class="menu-confirmation">
-                        <div class="menu-icon"> 
-                        <i class="fas fa-check icon-confirmation"></i>
-                        </div>
-                    </div>
+                </div>
                 </div>
             <div class="menu-item animate-2">
                 <div class="menu-description">
-                    <h4>Soupe à l'oignon</h4>
-                    <p>Revisitée</p>
-                    <span>20€</span>
+                    <input type="checkbox" style ="display: none;" id="dish-2">
+                    <label for="dish-2"><strong>Soupe à l'oignon</strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">Revisitée</span>
+                        <span class="prix">20€</span>
+                    </span>
+                </div>
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
+                    <i class="fas fa-check icon-confirmation"></i>
                     </div>
-                    <div class="menu-confirmation">
-                        <div class="menu-icon"> 
-                        <i class="fas fa-check icon-confirmation"></i>
-                        </div>
-                    </div>
+                </div>
                 </div>
         </section>
         <section class="titre-menu">
             <h3>Plats</h3>
             <div class="menu-item animate-3">
                 <div class="menu-description">
-                    <h4>Coquilles Saint-Jacques</h4>
-                    <p>Accompagnées d'une purée de panais</p>
-                    <span>40€</span>
+                    <input type="checkbox" style ="display: none;" id="dish-3">
+                    <label for="dish-3"><strong>Coquilles Saint-Jacques</strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">Accompagnées d'une purée de panais</span>
+                        <span class="prix">40€</span>
+                    </span>
+                </div>
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
+                    <i class="fas fa-check icon-confirmation"></i>
                     </div>
-                    <div class="menu-confirmation">
-                        <div class="menu-icon"> 
-                        <i class="fas fa-check icon-confirmation"></i>
-                        </div>
-                    </div>
+                </div>
                 </div>
             <div class="menu-item animate-4">
                 <div class="menu-description">
-                    <h4>Magret de canard</h4>
-                    <p>Et parmentier de pommes de terre</p> 
-                    <span>35€</span>
+                    <input type="checkbox" style ="display: none;" id="dish-4">
+                    <label for="dish-4"><strong>Magret de canard</strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">Et parmentier de pommes de terre</span>
+                        <span class="prix">35€</span>
+                    </span>
+                </div>
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
+                    <i class="fas fa-check icon-confirmation"></i>
                     </div>
-                    <div class="menu-confirmation">
-                        <div class="menu-icon"> 
-                        <i class="fas fa-check icon-confirmation"></i>
-                        </div>
-                    </div>
+                </div>
                 </div>
             <div class="menu-item animate-5">
                 <div class="menu-description">
-                    <h4>Pigeonneau d’Ille-et-Vilaine</h4>
-                    <p>Sur son lit de gnocchis aux légumes</p>
-                    <span>44€</span>
+                    <input type="checkbox" style ="display: none;" id="dish-5">
+                    <label for="dish-5"><strong>Pigeonneau d’Ille-et-Vilaine</strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">Sur son lit de gnocchis aux légumes</span>
+                        <span class="prix">44€</span>
+                    </span>
+                </div>
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
+                    <i class="fas fa-check icon-confirmation"></i>
                     </div>
-                    <div class="menu-confirmation">
-                        <div class="menu-icon"> 
-                        <i class="fas fa-check icon-confirmation"></i>
-                        </div>
-                    </div>
+                </div>
                 </div>
         </section>
         <section class="titre-menu">
             <h3>Desserts</h3>
             <div class="menu-item animate-6">
                 <div class="menu-description">
-                    <h4>Pétales de violettes glacés</h4>
-                    <p>Et purée de noisettes</p>
-                    <span>18€</span>
+                    <input type="checkbox" style ="display: none;" id="dish-6">
+                    <label for="dish-6"><strong>Pétales de violettes glacés</strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">Et purée de noisettes</span>
+                        <span class="prix">18€</span>
+                    </span>
+                </div>
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
+                    <i class="fas fa-check icon-confirmation"></i>
                     </div>
-                    <div class="menu-confirmation">
-                        <div class="menu-icon"> 
-                        <i class="fas fa-check icon-confirmation"></i>
-                        </div>
-                    </div>
+                </div>
                 </div>
             <div class="menu-item animate-7">
                 <div class="menu-description">
-                    <h4>Fondant au chocolat</h4>
-                    <p>Revisité</p>
-                    <span>22€</span>
+                    <input type="checkbox" style ="display: none;" id="dish-7">
+                    <label for="dish-7"><strong>Fondant au chocolat</strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">Revisité</span>
+                        <span class="prix">22€</span>
+                    </span>
+                </div>
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
+                    <i class="fas fa-check icon-confirmation"></i>
                     </div>
-                    <div class="menu-confirmation">
-                        <div class="menu-icon"> 
-                        <i class="fas fa-check icon-confirmation"></i>
-                        </div>
-                    </div>
+                </div>
                 </div>
             <div class="menu-item animate-8">
                 <div class="menu-description">
-                    <h4>Millefeuille croustillant</h4>
-                    <p>Myrtilles et pâte d’amande</p>
-                    <span>23€</span>
+                    <input type="checkbox" style ="display: none;" id="dish-8">
+                    <label for="dish-8"><strong>Millefeuille croustillant</strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">Myrtilles et pâte d’amande</span>
+                        <span class="prix">23€</span>
+                    </span>
+                </div>
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
+                    <!--<i class="fas fa-check icon-confirmation"></i>-->
                     </div>
-                    <div class="menu-confirmation">
-                        <div class="menu-icon"> 
-                        <i class="fas fa-check icon-confirmation"></i>
-                        </div>
-                    </div>
+                </div>
                 </div>
         </section>
         </div>
