--- a/le--delice-des-sens.html
+++ b/le--delice-des-sens.html
@@ -40,117 +40,162 @@
             <h3>Entrées</h3>
             <div class="menu-item animate-0">
                 <div class="menu-description">
-                <h4>Tartare de thon</h4>
-                <p>Assaisonné au yuzu</p>
-                <span>25€</span>
+                    <input type="checkbox" style ="display: none;" id="dish-0">
+                    <label for="dish-0"><strong>Tartare de thon</strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">Assaisonné au yuzu</span>
+                        <span class="prix">25€</span>
+                    </span>
                 </div>
-                <div class="menu-confirmation">
-                    <div class="menu-icon"> 
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
                     <i class="fas fa-check icon-confirmation"></i>
                     </div>
                 </div>
             </div>
             <div class="menu-item animate-1">
                 <div class="menu-description">
-                    <h4>Bouchée de homard croustillant</h4>
-                    <p>Et sa farandole de petits légumes</p>
-                    <span>35€</span>
+                    <input type="checkbox" style ="display: none;" id="dish-1">
+                    <label for="dish-1"><strong>Bouchée de homard croustillant</strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">Et sa farandole de petits légumes</span>
+                        <span class="prix">35€</span>
+                    </span>
+                </div>
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
+                    <i class="fas fa-check icon-confirmation"></i>
                     </div>
-                    <div class="menu-confirmation">
-                        <div class="menu-icon"> 
-                        <i class="fas fa-check icon-confirmation"></i>
-                        </div>
-                    </div>
+                </div>
                 </div>
             <div class="menu-item animate-2">
                 <div class="menu-description">
-                    <h4>Velouté de cèpes</h4>
-                    <p>Aux truffes</p>
-                    <span>20€</span>
+                    <input type="checkbox" style ="display: none;" id="dish-2">
+                    <label for="dish-2"><strong>Velouté de cèpes</strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">Aux truffes</span>
+                        <span class="prix">20€</span>
+                    </span>
+                </div>
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
+                    <i class="fas fa-check icon-confirmation"></i>
                     </div>
-                    <div class="menu-confirmation">
-                        <div class="menu-icon"> 
-                        <i class="fas fa-check icon-confirmation"></i>
-                        </div>
-                    </div>
+                </div>
                 </div>
         </section>
         <section class="titre-menu">
             <h3>Plats</h3>
             <div class="menu-item animate-3">
                 <div class="menu-description">
-                    <h4>Poulet rôti aux herbes de Provence</h4>
-                    <p>Et sa crème de truffe</p>
-                    <span>40€</span>
+                    <input type="checkbox" style ="display: none;" id="dish-3">
+                    <label for="dish-3"><strong>Poulet rôti aux herbes de Provence</strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">Et sa crème de truffe</span>
+                        <span class="prix">40€</span>
+                    </span>
+                </div>
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
+                    <i class="fas fa-check icon-confirmation"></i>
                     </div>
-                    <div class="menu-confirmation">
-                        <div class="menu-icon"> 
-                        <i class="fas fa-check icon-confirmation"></i>
-                        </div>
-                    </div>
+                </div>
                 </div>
             <div class="menu-item animate-4">
                 <div class="menu-description">
-                    <h4>Langouste rôtie</h4>
-                    <p>Et ses légumes de saison</p>
-                    <span>35€</span>
+                    <input type="checkbox" style ="display: none;" id="dish-4">
+                    <label for="dish-4"><strong>Langouste rôtie</strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">Et ses légumes de saison</span>
+                        <span class="prix">35€</span>
+                    </span>
+                </div>
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
+                    <i class="fas fa-check icon-confirmation"></i>
                     </div>
-                    <div class="menu-confirmation">
-                        <div class="menu-icon"> 
-                        <i class="fas fa-check icon-confirmation"></i>
-                        </div>
-                    </div>
+                </div>
                 </div>
             <div class="menu-item animate-5">
                 <div class="menu-description">
-                    <h4>Côte de boeuf Angus</h4>
-                    <p>Et sa purée de panais</p>
-                    <span>44€</span>
+                    <input type="checkbox" style ="display: none;" id="dish-5">
+                    <label for="dish-5"><strong>Côte de boeuf Angus</strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">Et sa purée de panais</span>
+                        <span class="prix">44€</span>
+                    </span>
+                </div>
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
+                    <i class="fas fa-check icon-confirmation"></i>
                     </div>
-                    <div class="menu-confirmation">
-                        <div class="menu-icon"> 
-                        <i class="fas fa-check icon-confirmation"></i>
-                        </div>
-                    </div>
+                </div>
                 </div>
         </section>
         <section class="titre-menu">
             <h3>Desserts</h3>
             <div class="menu-item animate-6">
                 <div class="menu-description">
-                    <h4>Farandole de desserts</h4>
-                    <p>Du chef</p>
-                    <span>18€</span>
+                    <input type="checkbox" style ="display: none;" id="dish-6">
+                    <label for="dish-6"><strong>Farandole de desserts</strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">Du chef</span>
+                        <span class="prix">18€</span>
+                    </span>
+                </div>
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
+                    <i class="fas fa-check icon-confirmation"></i>
                     </div>
-                    <div class="menu-confirmation">
-                        <div class="menu-icon"> 
-                        <i class="fas fa-check icon-confirmation"></i>
-                        </div>
-                    </div>
+                </div>
                 </div>
             <div class="menu-item animate-7">
                 <div class="menu-description">
-                    <h4>Crème brulée</h4>
-                    <p>Revisitée</p>
-                    <span>22€</span>
+                    <input type="checkbox" style ="display: none;" id="dish-7">
+                    <label for="dish-7"><strong>Crème brulée</strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">Revisitée</span>
+                        <span class="prix">22€</span>
+                    </span>
+                </div>
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
+                    <i class="fas fa-check icon-confirmation"></i>
                     </div>
-                    <div class="menu-confirmation">
-                        <div class="menu-icon"> 
-                        <i class="fas fa-check icon-confirmation"></i>
-                        </div>
-                    </div>
+                </div>
                 </div>
             <div class="menu-item animate-8">
                 <div class="menu-description">
-                    <h4>Tiramisu</h4>
-                    <p>À la noisette</p>
-                    <span>23€</span>
+                    <input type="checkbox" style ="display: none;" id="dish-8">
+                    <label for="dish-8"><strong>Tiramisu</strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">À la noisette</span>
+                        <span class="prix">23€</span>
+                    </span>
+                </div>
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
+                    <i class="fas fa-check icon-confirmation"></i>
                     </div>
-                    <div class="menu-confirmation">
-                        <div class="menu-icon"> 
-                        <i class="fas fa-check icon-confirmation"></i>
-                        </div>
-                    </div>
+                </div>
                 </div>
         </section>
         </div>
