--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -40,129 +40,179 @@
             <h3>Entrées</h3>
             <div class="menu-item animate-0">
                 <div class="menu-description">
-                <h4>Ravioles de foie gras</h4>
-                <p>Accompagnés de leur crème à la truffe</p>
-                <span>25€</span>
+                    <input type="checkbox" style ="display: none;" id="dish-0">
+                    <label for="dish-0"><strong>Ravioles de foie gras</strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">Accompagnés de leur crème à la truffe</span>
+                        <span class="prix">25€</span>
+                    </span>
                 </div>
-                <div class="menu-confirmation">
-                    <div class="menu-icon"> 
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
                     <i class="fas fa-check icon-confirmation"></i>
                     </div>
                 </div>
             </div>
             <div class="menu-item animate-1">
                 <div class="menu-description">
-                    <h4>Caviar osciètre</h4>
-                    <p>Sur blini à la farine de blé noir</p>
-                    <span>35€</span>
+                    <input type="checkbox" style ="display: none;" id="dish-1">
+                    <label for="dish-1"><strong>Caviar osciètre </strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">Sur blini à la farine de blé noir</span>
+                        <span class="prix">35€</span>
+                    </span>
+                </div>
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
+                    <i class="fas fa-check icon-confirmation"></i>
                     </div>
-                    <div class="menu-confirmation">
-                        <div class="menu-icon"> 
-                        <i class="fas fa-check icon-confirmation"></i>
-                        </div>
-                    </div>
+                </div>
                 </div>
             <div class="menu-item animate-2">
                 <div class="menu-description">
-                    <h4>Homard et espuma de potiron</h4>
-                    <p>Mariné aux zestes d'orange</p> 
-                    <span>20€</span>
+                    <input type="checkbox" style ="display: none;" id="dish-2">
+                    <label for="dish-2"><strong>Homard et espuma de potiron</strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">Mariné aux zestes d'orange</span>
+                        <span class="prix">20€</span>
+                    </span>
+                </div>
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
+                    <i class="fas fa-check icon-confirmation"></i>
                     </div>
-                    <div class="menu-confirmation">
-                        <div class="menu-icon"> 
-                        <i class="fas fa-check icon-confirmation"></i>
-                        </div>
-                    </div>
+                </div>
                 </div>
             <div class="menu-item animate-3">
                 <div class="menu-description">
-                    <h4>Foie gras de canard cuit entier</h4>
-                    <p>Confiture de figue et pain toasté</p>
-                    <span>35€</span>
+                    <input type="checkbox" style ="display: none;" id="dish-3">
+                    <label for="dish-3"><strong>Foie gras de canard cuit entier</strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">Confiture de figue et pain toasté</span>
+                        <span class="prix">35€</span>
+                    </span>
+                </div>
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
+                    <i class="fas fa-check icon-confirmation"></i>
                     </div>
-                    <div class="menu-confirmation">
-                        <div class="menu-icon"> 
-                        <i class="fas fa-check icon-confirmation"></i>
-                        </div>
-                    </div>
+                </div>
                 </div>
         </section>
         <section class="titre-menu">
             <h3>Plats</h3>
             <div class="menu-item animate-4">
                 <div class="menu-description">
-                    <h4>Noix de coquilles Saint-Jacques</h4>
-                    <p>Sur lit de purée de céleri-rave</p>
-                    <span>40€</span>
+                    <input type="checkbox" style ="display: none;" id="dish-4">
+                    <label for="dish-4"><strong>Noix de coquilles Saint-Jacques</strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">Sur lit de purée de céleri-rave</span>
+                        <span class="prix">40€</span>
+                    </span>
+                </div>
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
+                    <i class="fas fa-check icon-confirmation"></i>
                     </div>
-                    <div class="menu-confirmation">
-                        <div class="menu-icon"> 
-                        <i class="fas fa-check icon-confirmation"></i>
-                        </div>
-                    </div>
+                </div>
                 </div>
             <div class="menu-item animate-5">
                 <div class="menu-description">
-                    <h4>Langoustine poêlée</h4>
-                    <p>Purée de patate douce</p>
-                    <span>35€</span>
+                    <input type="checkbox" style ="display: none;" id="dish-5">
+                    <label for="dish-5"><strong>Langoustine poêlée</strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">Purée de patate douce</span>
+                        <span class="prix">35€</span>
+                    </span>
+                </div>
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
+                    <i class="fas fa-check icon-confirmation"></i>
                     </div>
-                    <div class="menu-confirmation">
-                        <div class="menu-icon"> 
-                        <i class="fas fa-check icon-confirmation"></i>
-                        </div>
-                    </div>
+                </div>
                 </div>
             <div class="menu-item animate-6">
                 <div class="menu-description">
-                    <h4>Mijoté de queue de boeuf</h4>
-                    <p>Et riz sauvage aux zestes de citron</p>
-                    <span>44€</span>
+                    <input type="checkbox" style ="display: none;" id="dish-6">
+                    <label for="dish-6"><strong>Mijoté de queue de boeuf</strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">Et riz sauvage aux zestes de citron</span>
+                        <span class="prix">44€</span>
+                    </span>
+                </div>
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
+                    <i class="fas fa-check icon-confirmation"></i>
                     </div>
-                    <div class="menu-confirmation">
-                        <div class="menu-icon"> 
-                        <i class="fas fa-check icon-confirmation"></i>
-                        </div>
-                    </div>
+                </div>
                 </div>
         </section>
         <section class="titre-menu">
             <h3>Desserts</h3>
             <div class="menu-item animate-7">
                 <div class="menu-description">
-                    <h4>Macaron noisette et chocolat</h4>
-                    <p>Glace au caramel brun et sel de Guérande</p>
-                    <span>18€</span>
+                    <input type="checkbox" style ="display: none;" id="dish-7">
+                    <label for="dish-7"><strong>Macaron noisette et chocolat</strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">Glace au caramel brun et sel de Guérande</span>
+                        <span class="prix">18€</span>
+                    </span>
+                </div>
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
+                    <i class="fas fa-check icon-confirmation"></i>
                     </div>
-                    <div class="menu-confirmation">
-                        <div class="menu-icon"> 
-                        <i class="fas fa-check icon-confirmation"></i>
-                        </div>
-                    </div>
+                </div>
                 </div>
             <div class="menu-item animate-8">
                 <div class="menu-description">
-                    <h4>Baba au rhum revisité</h4>
-                    <p>Avec son coulis de citron</p>
-                    <span>22€</span>
+                    <input type="checkbox" style ="display: none;" id="dish-8">
+                    <label for="dish-8"><strong>Baba au rhum revisité</strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">Avec son coulis de citron</span>
+                        <span class="prix">22€</span>
+                    </span>
+                </div>
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
+                    <i class="fas fa-check icon-confirmation"></i>
                     </div>
-                    <div class="menu-confirmation">
-                        <div class="menu-icon"> 
-                        <i class="fas fa-check icon-confirmation"></i>
-                        </div>
-                    </div>
+                </div>
                 </div>
             <div class="menu-item animate-9">
                 <div class="menu-description">
-                    <h4>Tarte au citron meringuée </h4>
-                    <p>Déstructurée</p>
-                    <span>23€</span>
+                    <input type="checkbox" style ="display: none;" id="dish-9">
+                    <label for="dish-9"><strong>Tarte au citron meringuée</strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">Déstructurée</span>
+                        <span class="prix">23€</span>
+                    </span>
+                </div>
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
+                    <i class="fas fa-check icon-confirmation"></i>
                     </div>
-                    <div class="menu-confirmation">
-                        <div class="menu-icon"> 
-                        <i class="fas fa-check icon-confirmation"></i>
-                        </div>
-                    </div>
+                </div>
                 </div>
         </section>
         </div>  
