--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -40,7 +40,8 @@
             <h3>Entrées</h3>
             <div class="menu-item animate-0">
                 <div class="menu-description">
-                    <h4>Fricassée d'escargot</h4>
+                   <input type="checkbox" style ="display: none;" id="dish-0">
+                    <label for="dish-0"><strong>Fricassée d'escargot</strong> </label>
 
                     <span class="menu-prix">
                         <span class="menu-span">Au piment d'Espelette</span>
@@ -48,116 +49,159 @@
                     </span>
                 </div>
 
-                <div class="menu-confirmation">
-                    <div class="menu-icon"> 
+                <div class="checkbox">
+                   <div class="menu-icon"> 
                     <i class="fas fa-check icon-confirmation"></i>
                     </div>
                 </div>
             </div>
             <div class="menu-item animate-1">
                 <div class="menu-description">
-                    <h4>Foie gras de canard mi-cuit</h4>
-                    <p>Et ses copeaux de truffe noire</p>                
-                    <div class="prix">35€</div>
-                    </div>
-                    <div class="menu-confirmation">
-                        <div class="menu-icon"> 
-                        <i class="fas fa-check icon-confirmation"></i>
-                        </div>
-                    </div>               
+                    <input type="checkbox" style ="display: none;" id="dish-1">
+                    <label for="dish-1"><strong>Foie gras de canard mi-cuit</strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">Et ses copeaux de truffe noire</span>
+                        <span class="prix">35€</span>
+                    </span>
                 </div>
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
+                    <i class="fas fa-check icon-confirmation"></i>
+                    </div>
+                </div>
+            </div>
             <div class="menu-item animate-2">
                 <div class="menu-description">
-                    <h4>Oeuf au plat</h4>
-                    <p>Assaisonné à la truffe sur lit de caviar</p>
-                    <div class="prix">20€</div>
-                    </div>
-                    <div class="menu-confirmation">
-                        <div class="menu-icon"> 
-                        <i class="fas fa-check icon-confirmation"></i>
-                        </div>
+                    <input type="checkbox" style ="display: none;" id="dish-2">
+                    <label for="dish-2"><strong>Oeuf au plat</strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">Assaisonné à la truffe sur lit de caviar</span>
+                        <span class="prix">20€</span>
+                    </span>
+                </div>
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
+                    <i class="fas fa-check icon-confirmation"></i>
                     </div>
                 </div>
+            </div>
         </section>
         <section class="titre-menu">
             <h3>Plats</h3>
             <div class="menu-item animate-3">
                 <div class="menu-description">
-                    <h4>Filet de boeuf aux herbes</h4>
-                    <p>Accompagné de sa ribambelle de légumes</p>
-                    <div class="prix">40€</div>
-                    </div>
-                    <div class="menu-confirmation">
-                        <div class="menu-icon"> 
-                        <i class="fas fa-check icon-confirmation"></i>
-                        </div>
-                    </div>   
+                    <input type="checkbox" style ="display: none;" id="dish-3">
+                    <label for="dish-3"><strong>Filet de boeuf aux herbes</strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">Accompagné de sa ribambelle de légumes</span>
+                        <span class="prix">40€</span>
+                    </span>
                 </div>
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
+                    <i class="fas fa-check icon-confirmation"></i>
+                    </div>
+                </div>
+            </div>
             <div class="menu-item animate-4">
                 <div class="menu-description">
-                    <h4>Parmentier de queue de boeuf</h4>
-                    <p>À la truffe noire sur sa purée de panais</p>          
-                    <div class="prix">35€</div>
-                    </div>
-                    <div class="menu-confirmation">
-                        <div class="menu-icon"> 
-                        <i class="fas fa-check icon-confirmation"></i>
-                        </div>
+                    <input type="checkbox" style ="display: none;" id="dish-4">
+                    <label for="dish-4"><strong>Parmentier de queue de boeuf</strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">À la truffe noire sur sa purée de panais</span>
+                        <span class="prix">35€</span>
+                    </span>
+                </div>
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
+                    <i class="fas fa-check icon-confirmation"></i>
                     </div>
                 </div>
+            </div>
             <div class="menu-item animate-5">
                 <div class="menu-description">
-                    <h4>Filet de turbot</h4>
-                    <p>Aux agrumes</p>            
-                    <div class="prix">44€</div>
-                    </div>
-                    <div class="menu-confirmation">
-                        <div class="menu-icon"> 
-                        <i class="fas fa-check icon-confirmation"></i>
-                        </div>
+                    <input type="checkbox" style ="display: none;" id="dish-5">
+                    <label for="dish-5"><strong>Filet de turbot</strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">Aux agrumes</span>
+                        <span class="prix">44€</span>
+                    </span>
+                </div>
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
+                    <i class="fas fa-check icon-confirmation"></i>
                     </div>
                 </div>
+            </div>
         </section>
-        <section class="titre-menu animate-6">
+        <section class="titre-menu ">
             <h3>Desserts</h3>
-            <div class="menu-item">
+            <div class="menu-item animate-6">
                 <div class="menu-description">
-                    <h4>Paris-Brest</h4>
-                    <p>Revisité</p>    
-                    <div class="prix">18€</div>
-                    </div>
-                    <div class="menu-confirmation">
-                        <div class="menu-icon"> 
-                        <i class="fas fa-check icon-confirmation"></i>
-                        </div>
+                    <input type="checkbox" style ="display: none;" id="dish-6">
+                    <label for="dish-6"><strong>Paris-Brest</strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">Revisité</span>
+                        <span class="prix">18€</span>
+                    </span>
+                </div>
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
+                    <i class="fas fa-check icon-confirmation"></i>
                     </div>
                 </div>
+            </div>
+                
             <div class="menu-item animate-7">
                 <div class="menu-description">
-                    <h4>Macaron au chocolat d'exception</h4>
-                    <p>Et glace à la vanille de Madagascar</p>  
-                    <div class="prix">22€</div>
-                    </div>
-                    <div class="menu-confirmation">
-                        <div class="menu-icon"> 
-                        <i class="fas fa-check icon-confirmation"></i>
-                        </div>
+                    <input type="checkbox" style ="display: none;" id="dish-7">
+                    <label for="dish-7"><strong>Macaron au chocolat d'exception</strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">Et glace à la vanille de Madagascar</span>
+                        <span class="prix">22€</span>
+                    </span>
+                </div>
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
+                    <i class="fas fa-check icon-confirmation"></i>
                     </div>
                 </div>
+            </div>
+                
             <div class="menu-item animate-8">
                 <div class="menu-description">
-                    <h4>Mousse au chocolat</h4>
-                    <p>Au piment d'Espelette et à la truffe noire</p>
-                    <div class="prix">23€</div>
-                    </div>
-                    <div class="menu-confirmation">
-                        <div class="menu-icon"> 
-                        <i class="fas fa-check icon-confirmation"></i>
-                        </div>
+                    <input type="checkbox" style ="display: none;" id="dish-8">
+                    <label for="dish-8"><strong>Mousse au chocolat</strong> </label>
+
+                    <span class="menu-prix">
+                        <span class="menu-span">Au piment d'Espelette et à la truffe noire</span>
+                        <span class="prix">23€</span>
+                    </span>
+                </div>
+
+                <div class="checkbox">
+                   <div class="menu-icon"> 
+                    <i class="fas fa-check icon-confirmation"></i>
                     </div>
                 </div>
+            </div>
         </section>
         </div>
+
         <div class="commander">
             <button class="button-commander">Commander</button>
         </div>
