ajouter class menu-checkbox et modifie style display:none;

--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -40,7 +40,7 @@
             <h3>Entrées</h3>
             <div class="menu-item animate-0">
                 <div class="menu-description">
-                   <input type="checkbox" style ="display: none;" id="dish-0">
+                   <input type="checkbox" class="menu-checkbox" id="dish-0">
                     <label for="dish-0"><strong>Fricassée d'escargot</strong> </label>
 
                     <span class="menu-prix">
@@ -57,7 +57,7 @@
             </div>
             <div class="menu-item animate-1">
                 <div class="menu-description">
-                    <input type="checkbox" style ="display: none;" id="dish-1">
+                    <input type="checkbox" class="menu-checkbox" id="dish-1">
                     <label for="dish-1"><strong>Foie gras de canard mi-cuit</strong> </label>
 
                     <span class="menu-prix">
@@ -74,7 +74,7 @@
             </div>
             <div class="menu-item animate-2">
                 <div class="menu-description">
-                    <input type="checkbox" style ="display: none;" id="dish-2">
+                    <input type="checkbox" class="menu-checkbox" id="dish-2">
                     <label for="dish-2"><strong>Oeuf au plat</strong> </label>
 
                     <span class="menu-prix">
@@ -94,7 +94,7 @@
             <h3>Plats</h3>
             <div class="menu-item animate-3">
                 <div class="menu-description">
-                    <input type="checkbox" style ="display: none;" id="dish-3">
+                    <input type="checkbox" class="menu-checkbox" id="dish-3">
                     <label for="dish-3"><strong>Filet de boeuf aux herbes</strong> </label>
 
                     <span class="menu-prix">
@@ -111,7 +111,7 @@
             </div>
             <div class="menu-item animate-4">
                 <div class="menu-description">
-                    <input type="checkbox" style ="display: none;" id="dish-4">
+                    <input type="checkbox" class="menu-checkbox" id="dish-4">
                     <label for="dish-4"><strong>Parmentier de queue de boeuf</strong> </label>
 
                     <span class="menu-prix">
@@ -128,7 +128,7 @@
             </div>
             <div class="menu-item animate-5">
                 <div class="menu-description">
-                    <input type="checkbox" style ="display: none;" id="dish-5">
+                    <input type="checkbox" class="menu-checkbox" id="dish-5">
                     <label for="dish-5"><strong>Filet de turbot</strong> </label>
 
                     <span class="menu-prix">
@@ -148,7 +148,7 @@
             <h3>Desserts</h3>
             <div class="menu-item animate-6">
                 <div class="menu-description">
-                    <input type="checkbox" style ="display: none;" id="dish-6">
+                    <input type="checkbox" class="menu-checkbox" id="dish-6">
                     <label for="dish-6"><strong>Paris-Brest</strong> </label>
 
                     <span class="menu-prix">
@@ -166,7 +166,7 @@
                 
             <div class="menu-item animate-7">
                 <div class="menu-description">
-                    <input type="checkbox" style ="display: none;" id="dish-7">
+                    <input type="checkbox" class="menu-checkbox" id="dish-7">
                     <label for="dish-7"><strong>Macaron au chocolat d'exception</strong> </label>
 
                     <span class="menu-prix">
@@ -184,7 +184,7 @@
                 
             <div class="menu-item animate-8">
                 <div class="menu-description">
-                    <input type="checkbox" style ="display: none;" id="dish-8">
+                    <input type="checkbox" class="menu-checkbox" id="dish-8">
                     <label for="dish-8"><strong>Mousse au chocolat</strong> </label>
 
                     <span class="menu-prix">
