--- a/le--delice-des-sens.html
+++ b/le--delice-des-sens.html
@@ -40,7 +40,7 @@
             <h3>Entrées</h3>
             <div class="menu-item animate-0">
                 <div class="menu-description">
-                    <input type="checkbox" style ="display: none;" id="dish-0">
+                    <input type="checkbox" class="menu-checkbox" id="dish-0">
                     <label for="dish-0"><strong>Tartare de thon</strong> </label>
 
                     <span class="menu-prix">
@@ -57,7 +57,7 @@
             </div>
             <div class="menu-item animate-1">
                 <div class="menu-description">
-                    <input type="checkbox" style ="display: none;" id="dish-1">
+                    <input type="checkbox" class="menu-checkbox" id="dish-1">
                     <label for="dish-1"><strong>Bouchée de homard croustillant</strong> </label>
 
                     <span class="menu-prix">
@@ -74,7 +74,7 @@
                 </div>
             <div class="menu-item animate-2">
                 <div class="menu-description">
-                    <input type="checkbox" style ="display: none;" id="dish-2">
+                    <input type="checkbox" class="menu-checkbox" id="dish-2">
                     <label for="dish-2"><strong>Velouté de cèpes</strong> </label>
 
                     <span class="menu-prix">
@@ -94,7 +94,7 @@
             <h3>Plats</h3>
             <div class="menu-item animate-3">
                 <div class="menu-description">
-                    <input type="checkbox" style ="display: none;" id="dish-3">
+                    <input type="checkbox" class="menu-checkbox" id="dish-3">
                     <label for="dish-3"><strong>Poulet rôti aux herbes de Provence</strong> </label>
 
                     <span class="menu-prix">
@@ -111,7 +111,7 @@
                 </div>
             <div class="menu-item animate-4">
                 <div class="menu-description">
-                    <input type="checkbox" style ="display: none;" id="dish-4">
+                    <input type="checkbox" class="menu-checkbox" id="dish-4">
                     <label for="dish-4"><strong>Langouste rôtie</strong> </label>
 
                     <span class="menu-prix">
@@ -128,7 +128,7 @@
                 </div>
             <div class="menu-item animate-5">
                 <div class="menu-description">
-                    <input type="checkbox" style ="display: none;" id="dish-5">
+                    <input type="checkbox" class="menu-checkbox" id="dish-5">
                     <label for="dish-5"><strong>Côte de boeuf Angus</strong> </label>
 
                     <span class="menu-prix">
@@ -148,7 +148,7 @@
             <h3>Desserts</h3>
             <div class="menu-item animate-6">
                 <div class="menu-description">
-                    <input type="checkbox" style ="display: none;" id="dish-6">
+                    <input type="checkbox" class="menu-checkbox" id="dish-6">
                     <label for="dish-6"><strong>Farandole de desserts</strong> </label>
 
                     <span class="menu-prix">
@@ -165,7 +165,7 @@
                 </div>
             <div class="menu-item animate-7">
                 <div class="menu-description">
-                    <input type="checkbox" style ="display: none;" id="dish-7">
+                    <input type="checkbox" class="menu-checkbox" id="dish-7">
                     <label for="dish-7"><strong>Crème brulée</strong> </label>
 
                     <span class="menu-prix">
@@ -182,7 +182,7 @@
                 </div>
             <div class="menu-item animate-8">
                 <div class="menu-description">
-                    <input type="checkbox" style ="display: none;" id="dish-8">
+                    <input type="checkbox" class="menu-checkbox" id="dish-8">
                     <label for="dish-8"><strong>Tiramisu</strong> </label>
 
                     <span class="menu-prix">
