--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -40,7 +40,7 @@
             <h3>Entrées</h3>
             <div class="menu-item animate-0">
                 <div class="menu-description">
-                    <input type="checkbox" style ="display: none;" id="dish-0">
+                    <input type="checkbox" class="menu-checkbox" id="dish-0">
                     <label for="dish-0"><strong>Ravioles de foie gras</strong> </label>
 
                     <span class="menu-prix">
@@ -57,7 +57,7 @@
             </div>
             <div class="menu-item animate-1">
                 <div class="menu-description">
-                    <input type="checkbox" style ="display: none;" id="dish-1">
+                    <input type="checkbox" class="menu-checkbox" id="dish-1">
                     <label for="dish-1"><strong>Caviar osciètre </strong> </label>
 
                     <span class="menu-prix">
@@ -74,7 +74,7 @@
                 </div>
             <div class="menu-item animate-2">
                 <div class="menu-description">
-                    <input type="checkbox" style ="display: none;" id="dish-2">
+                    <input type="checkbox" class="menu-checkbox" id="dish-2">
                     <label for="dish-2"><strong>Homard et espuma de potiron</strong> </label>
 
                     <span class="menu-prix">
@@ -91,7 +91,7 @@
                 </div>
             <div class="menu-item animate-3">
                 <div class="menu-description">
-                    <input type="checkbox" style ="display: none;" id="dish-3">
+                    <input type="checkbox" class="menu-checkbox" id="dish-3">
                     <label for="dish-3"><strong>Foie gras de canard cuit entier</strong> </label>
 
                     <span class="menu-prix">
@@ -111,7 +111,7 @@
             <h3>Plats</h3>
             <div class="menu-item animate-4">
                 <div class="menu-description">
-                    <input type="checkbox" style ="display: none;" id="dish-4">
+                    <input type="checkbox" class="menu-checkbox" id="dish-4">
                     <label for="dish-4"><strong>Noix de coquilles Saint-Jacques</strong> </label>
 
                     <span class="menu-prix">
@@ -128,7 +128,7 @@
                 </div>
             <div class="menu-item animate-5">
                 <div class="menu-description">
-                    <input type="checkbox" style ="display: none;" id="dish-5">
+                    <input type="checkbox" class="menu-checkbox" id="dish-5">
                     <label for="dish-5"><strong>Langoustine poêlée</strong> </label>
 
                     <span class="menu-prix">
@@ -145,7 +145,7 @@
                 </div>
             <div class="menu-item animate-6">
                 <div class="menu-description">
-                    <input type="checkbox" style ="display: none;" id="dish-6">
+                    <input type="checkbox" class="menu-checkbox" id="dish-6">
                     <label for="dish-6"><strong>Mijoté de queue de boeuf</strong> </label>
 
                     <span class="menu-prix">
@@ -165,7 +165,7 @@
             <h3>Desserts</h3>
             <div class="menu-item animate-7">
                 <div class="menu-description">
-                    <input type="checkbox" style ="display: none;" id="dish-7">
+                    <input type="checkbox" class="menu-checkbox" id="dish-7">
                     <label for="dish-7"><strong>Macaron noisette et chocolat</strong> </label>
 
                     <span class="menu-prix">
@@ -182,7 +182,7 @@
                 </div>
             <div class="menu-item animate-8">
                 <div class="menu-description">
-                    <input type="checkbox" style ="display: none;" id="dish-8">
+                    <input type="checkbox" class="menu-checkbox" id="dish-8">
                     <label for="dish-8"><strong>Baba au rhum revisité</strong> </label>
 
                     <span class="menu-prix">
@@ -199,7 +199,7 @@
                 </div>
             <div class="menu-item animate-9">
                 <div class="menu-description">
-                    <input type="checkbox" style ="display: none;" id="dish-9">
+                    <input type="checkbox" class="menu-checkbox" id="dish-9">
                     <label for="dish-9"><strong>Tarte au citron meringuée</strong> </label>
 
                     <span class="menu-prix">
